[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/Player/avatar_v2/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/avatar_v2/Nametag3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Player/avatar_v2/PlayerCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://model_assets/Avatars/AvatarRig.dae" type="PackedScene" id=4]
[ext_resource path="res://materials/BrightTeal.tres" type="Material" id=5]
[ext_resource path="res://materials/Chestnut.tres" type="Material" id=6]
[ext_resource path="res://materials/SmokySkin.tres" type="Material" id=7]
[ext_resource path="res://materials/Eggplant.tres" type="Material" id=8]
[ext_resource path="res://materials/Black.tres" type="Material" id=9]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("KinematicBody/Nametag/Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = SubResource( 2 )

[sub_resource type="CapsuleShape" id=4]
radius = 0.0309017
height = 0.103513

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Land"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Flail-loop"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "ClimbDown-loop"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "ClimbUp-loop"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "JumpPose"

[sub_resource type="AnimationNodeTransition" id=10]
input_count = 2
xfade_time = 0.25
input_0/name = "state 0"
input_0/auto_advance = false
input_1/name = "state 1"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTimeSeek" id=11]

[sub_resource type="AnimationNodeTimeSeek" id=12]

[sub_resource type="AnimationNodeBlend2" id=13]
filter_enabled = true
filters = [ "FemaleRig", "FemaleRig/Skeleton:Elbow_Pole.L", "FemaleRig/Skeleton:Elbow_Pole.R", "FemaleRig/Skeleton:forearm.L", "FemaleRig/Skeleton:forearm.R", "FemaleRig/Skeleton:hand.L", "FemaleRig/Skeleton:hand.R", "FemaleRig/Skeleton:hand_IK.L", "FemaleRig/Skeleton:hand_IK.R", "FemaleRig/Skeleton:shoulder.L", "FemaleRig/Skeleton:shoulder.R", "FemaleRig/Skeleton:spine.001", "FemaleRig/Skeleton:spine.002", "FemaleRig/Skeleton:spine.003", "FemaleRig/Skeleton:spine.005", "FemaleRig/Skeleton:spine.006", "FemaleRig/Skeleton:upper_arm.L", "FemaleRig/Skeleton:upper_arm.R" ]

[sub_resource type="AnimationNodeOneShot" id=14]
autorestart_random_delay = 1.38329e-26

[sub_resource type="AnimationNodeTimeScale" id=15]

[sub_resource type="AnimationNodeTransition" id=16]
input_count = 3
xfade_time = 0.1
input_0/name = "Walk"
input_0/auto_advance = false
input_1/name = "Flail"
input_1/auto_advance = false
input_2/name = "Climb"
input_2/auto_advance = false

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "MoonWalking-loop"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "MoonWalkingBack-loop"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "MoonWalkingLeft-loop"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "MoonWalkingRight-loop"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "CasualStance"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 21 )
blend_point_4/pos = Vector2( 0, 0 )

[sub_resource type="AnimationNodeBlendTree" id=23]
graph_offset = Vector2( -131, 7 )
nodes/Animation/node = SubResource( 9 )
nodes/Animation/position = Vector2( 440, 460 )
"nodes/Animation 2/node" = SubResource( 5 )
"nodes/Animation 2/position" = Vector2( 1200, 280 )
"nodes/Animation 3/node" = SubResource( 6 )
"nodes/Animation 3/position" = Vector2( 440, 200 )
"nodes/Animation 4/node" = SubResource( 7 )
"nodes/Animation 4/position" = Vector2( -100, 380 )
"nodes/Animation 5/node" = SubResource( 8 )
"nodes/Animation 5/position" = Vector2( -80, 260 )
nodes/ClimbDirection/node = SubResource( 10 )
nodes/ClimbDirection/position = Vector2( 420, 320 )
nodes/ClimbProgressDown/node = SubResource( 11 )
nodes/ClimbProgressDown/position = Vector2( 160, 400 )
nodes/ClimbProgressUp/node = SubResource( 12 )
nodes/ClimbProgressUp/position = Vector2( 160, 280 )
nodes/JumpAmount/node = SubResource( 13 )
nodes/JumpAmount/position = Vector2( 960, 120 )
nodes/Land/node = SubResource( 14 )
nodes/Land/position = Vector2( 1180, 80 )
nodes/MovementSpeed/node = SubResource( 15 )
nodes/MovementSpeed/position = Vector2( 440, 80 )
nodes/MovementState/node = SubResource( 16 )
nodes/MovementState/position = Vector2( 740, 80 )
nodes/Walk/node = SubResource( 22 )
nodes/Walk/position = Vector2( 260, 80 )
nodes/output/position = Vector2( 1380, 100 )
node_connections = [ "output", 0, "Land", "Land", 0, "JumpAmount", "Land", 1, "Animation 2", "ClimbDirection", 0, "ClimbProgressUp", "ClimbDirection", 1, "ClimbProgressDown", "ClimbProgressDown", 0, "Animation 4", "ClimbProgressUp", 0, "Animation 5", "JumpAmount", 0, "MovementState", "JumpAmount", 1, "Animation", "MovementSpeed", 0, "Walk", "MovementState", 0, "MovementSpeed", "MovementState", 1, "Animation 3", "MovementState", 2, "ClimbDirection" ]

[node name="LocalPlayer" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]

[node name="KinematicBody" type="KinematicBody" parent="."]

[node name="ImmediateGeometry" type="ImmediateGeometry" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 0 )
material_override = SubResource( 1 )

[node name="Light" type="OmniLight" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 0.0285586, -0.999592, 0, 0.999592, 0.0285586, 0, 0.174787, 0 )
visible = false
omni_range = 1.5

[node name="Nametag" parent="KinematicBody" instance=ExtResource( 2 )]
visible = false
material/0 = SubResource( 3 )

[node name="OnGround" type="RayCast" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.03, 0 )
enabled = true
cast_to = Vector3( 0, -0.1, 0 )

[node name="PlayerCamera" parent="KinematicBody" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.144089, 0 )
kinematic_body_path = NodePath("..")
kinematic_body_camera = NodePath("../../Camera")
enabled = true

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0828768, 0 )
shape = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="KinematicBody"]
tree_root = SubResource( 23 )
anim_player = NodePath("../Model/AnimationPlayer")
active = true
process_mode = 0
root_motion_track = NodePath("FemaleRig/Skeleton:Root")
parameters/ClimbDirection/current = 0
parameters/ClimbProgressDown/seek_position = -1.0
parameters/ClimbProgressUp/seek_position = -1.0
parameters/JumpAmount/blend_amount = 0.0
parameters/Land/active = false
parameters/MovementSpeed/scale = 1.0
parameters/MovementState/current = 0
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="RootMotionView" type="RootMotionView" parent="KinematicBody"]
animation_path = NodePath("../AnimationTree")
cell_size = 0.1
radius = 2.0

[node name="Model" parent="KinematicBody" instance=ExtResource( 4 )]

[node name="AvatarFemale" parent="KinematicBody/Model/FemaleRig/Skeleton" index="0"]
visible = false
lod_min_distance = 5.0
lod_max_distance = 1.0
material/0 = ExtResource( 5 )
material/1 = ExtResource( 6 )
material/2 = ExtResource( 7 )
material/3 = ExtResource( 8 )
material/4 = ExtResource( 9 )

[node name="AvatarMale" parent="KinematicBody/Model/FemaleRig/Skeleton" index="1"]
lod_min_distance = 5.0
lod_max_distance = 1.0
material/0 = ExtResource( 9 )
material/1 = ExtResource( 8 )
material/2 = ExtResource( 6 )
material/3 = ExtResource( 5 )
material/4 = ExtResource( 7 )

[node name="AnimationPlayer" parent="KinematicBody/Model" index="1"]
playback_process_mode = 0

[editable path="KinematicBody/Model"]
